Fixing a dumb thing on mobile

--- a/code_generator.css
+++ b/code_generator.css
@@ -16,3 +16,7 @@
 input.error {
   border-color: red;
 }
+
+[data-page-type=single] .sidebar-content {
+  margin-bottom: 0;
+}
